feat(Viper-59): related product

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -250,7 +250,7 @@
   "productDetail": {
     "loading": "Loading product...",
     "notFound": "Product not found.",
-    "description": "Experience premium sound quality and industry-leading noise cancellation with these wireless headphones. Perfect for music lovers and frequent travelers.",
+    "description": "This is a high-quality product",
     "quantity": "Quantity",
     "relatedProducts": "Related Products:",
     "memory": "Memory",
