--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -251,7 +251,7 @@
   "productDetail": {
     "loading": "Đang tải sản phẩm...",
     "notFound": "Không tìm thấy sản phẩm.",
-    "description": "Trải nghiệm chất lượng âm thanh cao cấp và khả năng chống ồn vượt trội với tai nghe không dây này. Hoàn hảo cho những người yêu âm nhạc và du khách thường xuyên.",
+    "description": "Đây là sản phẩm chất lượng cao",
     "quantity": "Số lượng",
     "relatedProducts": "Sản phẩm liên quan:",
     "memory": "Dung lượng",
